--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Felipe Nacif de Souza - Site Pessoal</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -60,38 +60,51 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Experiência</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Analista de Sistemas Sênior</h3>
+                            <div class="subheading mb-3">Spassu Tecnologia</div>
+                            <p>Responsável pelo desenvolvimento e evolução de aplicações voltadas à Permissão de Trabalho em instalações offshore na Petrobras, utilizando as tecnologias C#, Web Api e Angular.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">MARÇO 2020 - ATUALMENTE</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Coordenador / Líder Técnico</h3>
+                            <div class="subheading mb-3">Tata Consultancy Services</div>
+                            <p>Responsável pela gestão de acervo com 110 aplicações nas tecnologias Java, .Net, Classic ASP e NodeJS, realizando evoluções e adaptações nos sistemas ligados às atividades de upstream da Petrobras. Coordeno uma equipe de 9 pessoas, aferindo qualidade, prazos e performance do time, além de ser ponto focal do contrato com a Petrobras.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">MARÇO 2020 - ABRIL 2015</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Analista de Sistemas Pleno</h3>
+                            <div class="subheading mb-3">Indra Company Brasil</div>
+                            <p>Analista e Responsável Técnico de sistemas da Petrobras, pela empresa Indra, prestando serviços de desenvolvimento de sistemas de gestão de Análise de Riscos de SMS e Conformidade Legal das atividades da empresa, em todo Brasil e de sucursais pelo mundo, utilizando as linguagens ASP.NET e ASP.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">JANEIRO 2014 - MARÇO 2015</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Analista de Sistemas Pleno</h3>
+                            <div class="subheading mb-3">Spassu Tecnologia</div>
+                            <p>Analista e Responsável Técnico de sistemas da Petrobras, pela empresa Spassu Informática, prestando serviços de desenvolvimento de sistemas de gestão de Análise de Riscos de SMS e Conformidade Legal das atividades da empresa, em todo Brasil e de sucursais pelo mundo, utilizando as linguagens ASP.NET e ASP.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">NOVEMBRO 2007 - DEZEMBRO 2013</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Desenvolvedor Web</h3>
+                            <div class="subheading mb-3">Sinergia Soluções</div>
+                            <p>Programador de páginas de Internet e sistemas Web na linguagem Classic ASP com Javascript, utilizando bancos de dados como SqlServer e Firebird. Desenvolvimento de sites com as ferramentas Macromedia: Dreamweaver, Fireworks e Flash. Experiência de 3 anos.
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">MARÇO 2004 - NOVEMBRO 2007</span></div>
                     </div>
                 </div>
             </section>
@@ -99,23 +112,20 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Formação Acadêmica</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Superior em Tecnologia em Informática</h3>
+                            <div class="subheading mb-3">IFF Campos dos Goytacazes</div>
+                            <div>Conclusão em 2005</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Pós Graduação Latu Sensu em Engenharia de Software</h3>
+                            <div class="subheading mb-3">ESAB - Escola Aberta do Brasil</div>
+                            <div>Conclusão em 2012</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
                 </div>
             </section>
@@ -124,39 +134,31 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Conhecimento em Linguagens de Programação e Ferramentas</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
+                        <li class="list-inline-item">.Net C#</li>
+                        <li class="list-inline-item text-primary">Angular</li>
+                        <li class="list-inline-item">Visual Studio</li>
+                        <li class="list-inline-item text-primary">.Net Core</li>
+                        <li class="list-inline-item">Javascript</li>
+                        <li class="list-inline-item text-primary">Blazor</li>
+                        <li class="list-inline-item">Web Api</li>
+                        <li class="list-inline-item text-primary">HTML</li>
+                        <li class="list-inline-item">Java</li>
+                        <li class="list-inline-item text-primary">Entity Framework</li>
+                        <li class="list-inline-item">NHibernate</li>
+                        <li class="list-inline-item text-primary">Visual Studio</li>
+                        <li class="list-inline-item">Dapper</li>
+                        <li class="list-inline-item text-primary">SQL Server</li>
+                        <li class="list-inline-item">Oracle</li>
+                        <li class="list-inline-item text-primary">REST</li>
+                        <li class="list-inline-item">SOAP</li>
+                        <li class="list-inline-item text-primary">JQuery</li>
+                        <li class="list-inline-item">Ionic Framework</li>
+                        <li class="list-inline-item text-primary">Python</li>
+                        <li class="list-inline-item">MySQL</li>
+                        <li class="list-inline-item text-primary">NodeJS</li>
+                        <li class="list-inline-item">Xamarin</li>
                     </ul>
                 </div>
             </section>
@@ -164,9 +166,30 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">Licenças e Certificados</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">MCP – Microsoft Certified Professional</h3>
+                            <div class="subheading mb-1">Microsoft</div>
+                            <div>Emitido em 2007</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Scrum Foundation Professional Certificate (SFPC)</h3>
+                            <div class="subheading mb-1">CertiProf</div>
+                            <div><a href="https://drive.google.com/file/d/18AsmbEdTsw4KsaKKmC0zS6_s-yIEJnvk/view?usp=sharing" target="_blank">Credencial nº CLVPSVRYPP-SSVGSZJZ-XHRSRYYPWS</a></div>
+                            <div>Emitido em 2020</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Scrum Fundamentals Certified</h3>
+                            <div class="subheading mb-1">SCRUMstudy - Accreditation Body for Scrum and Agile</div>
+                            <div><a href="https://drive.google.com/file/d/1pWiA-3-5VheRZmVuSCNsAQMbEbOQAA11/view?usp=sharing" target="_blank">Credencial nº 733562</a></div>
+                            <div>Conclusão em 2019</div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
