Conclusao do site

--- a/index.html
+++ b/index.html
@@ -196,45 +196,33 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Projetos</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">TalkService - Solução de comunicação em Logística</h4>
+                                <div>Ferramenta para requisição, rastreio e comunicação entre empresas de transporte e seus clientes, criando um canal único de mensagens e acompanhamento de fretes e transportes.</div>
+                                <div><a href="https://www.appstart.com.br/talkservice/" target="_blank">Acessar projeto</a></div>
+                            </div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            &nbsp;
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">WideCert - Solução para gerenciamento de Inspeções e Certificados Industriais</h4>
+                                <div>Solução para gerenciamento de Inspeções e Certificados Industriais. Fornece controle total sobre o processo de montagem e inspeção de um equipamento industrial, emitindo certificação comprovadora de teste inspecionado. Possui também possibilidade de impressão de etiquetas de rastreio com QRCode, para que seja possível baixar os certificados pelo smartphone.</div>
+                                <div><a href="https://www.appstart.com.br/" target="_blank">Acessar projeto</a></div>
+                            </div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            &nbsp;
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">Aplicativo Unimed Campos</h4>
+                                <div>Projeto de App para o cliente Unimed Campos dos Goytacazes - RJ. Fornece serviço para facilitar a sua comunicação com o plano de saúde, além dos beneficiários terem acesso à Segunda via de Boletos, seus Demonstrativos de Despesas Médicas para o Imposto de Renda, Atualização Cadastral, Link para o Guia Médico, além de informações sobre os planos de saúde disponíveis. Mais de 5.000 dispositivos utilizaram este aplicativo.</div>
+                            </div>
                         </li>
                     </ul>
                 </div>
