Alterações no site

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Site pessoal de Felipe Nacif de Souza" />
+        <meta name="author" content="Felipe Nacif de Souza" />
         <title>Felipe Nacif de Souza - Site Pessoal</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -33,6 +33,13 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projetos</a></li>
                 </ul>
             </div>
+            <!-- <div>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://www.linkedin.com/in/felipenacif/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://github.com/felipenacif" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/felipe.nacifdesouza/" target="_blank"><i class="fab fa-facebook-f" target="_blank"></i></a>
+                </div>
+            </div> -->
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
@@ -63,23 +70,52 @@
                     <h2 class="mb-5">Experiência</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <a class="navbar-brand js-scroll-trigger">
+                                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/fugro.jpg" alt="Fugro" /></span>
+                            </a>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">FullStack Developer</h3>
+                            <div class="subheading mb-3">Fugro do Brasil</div>
+                            <p>Integrante da equipe de evolução e manutenção de aplicações integradas da companhia, utilizando as tecnologias C#, Web Api e Angular.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">AGOSTO 2020 - ATUALMENTE</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <a class="navbar-brand js-scroll-trigger">
+                                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/spassu.jpeg" alt="Fugro" /></span>
+                            </a>
+                        </div>
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Analista de Sistemas Sênior</h3>
                             <div class="subheading mb-3">Spassu Tecnologia</div>
                             <p>Responsável pelo desenvolvimento e evolução de aplicações voltadas à Permissão de Trabalho em instalações offshore na Petrobras, utilizando as tecnologias C#, Web Api e Angular.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">MARÇO 2020 - ATUALMENTE</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">MARÇO 2020 - AGOSTO 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <a class="navbar-brand js-scroll-trigger">
+                                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/tcs.jpeg" alt="Fugro" /></span>
+                            </a>
+                        </div>
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Coordenador / Líder Técnico</h3>
                             <div class="subheading mb-3">Tata Consultancy Services</div>
                             <p>Responsável pela gestão de acervo com 110 aplicações nas tecnologias Java, .Net, Classic ASP e NodeJS, realizando evoluções e adaptações nos sistemas ligados às atividades de upstream da Petrobras. Coordeno uma equipe de 9 pessoas, aferindo qualidade, prazos e performance do time, além de ser ponto focal do contrato com a Petrobras.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">MARÇO 2020 - ABRIL 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">ABRIL 2015 - MARÇO 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <a class="navbar-brand js-scroll-trigger">
+                                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/indra.jpeg" alt="Fugro" /></span>
+                            </a>
+                        </div>
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Analista de Sistemas Pleno</h3>
                             <div class="subheading mb-3">Indra Company Brasil</div>
@@ -89,6 +125,11 @@
                         <div class="flex-shrink-0"><span class="text-primary">JANEIRO 2014 - MARÇO 2015</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <a class="navbar-brand js-scroll-trigger">
+                                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/spassu.jpeg" alt="Fugro" /></span>
+                            </a>
+                        </div>
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Analista de Sistemas Pleno</h3>
                             <div class="subheading mb-3">Spassu Tecnologia</div>
@@ -167,6 +208,13 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Licenças e Certificados</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Microsoft Azure Specialist - Fundamentals (AZ-900)</h3>
+                            <div class="subheading mb-1">Microsoft</div>
+                            <div>Emitido em 2020</div>
+                        </div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">MCP – Microsoft Certified Professional</h3>
