Adicionado a Shape Digital

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         FullStack Developer | System Analyst | Tech Lead  ·
                         <a href="mailto:fnacif@gmail.com">fnacif@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Sou desenvolvedor/analista há 17 anos, com ênfase na linguagem C#, tendo também trabalhado com Javascript, AngularJS, Java e Classic ASP. Possuo conhecimentos avançados em Entity Framework, NHibernate, REST, SOAP, JQuery, Oracle, SQL Server, Ionic Framework e Xamarin. Também atuei em projetos utilizando as seguintes tecnologias: Python, Typescript, MySQL, PHP, Struts, NodeJS e MongoDB.</p>
+                    <p class="lead mb-5">Sou desenvolvedor/analista há 18 anos, com ênfase na linguagem C#, tendo também trabalhado com Javascript, AngularJS, Java e Classic ASP. Possuo conhecimentos avançados em Entity Framework, NHibernate, REST, SOAP, JQuery, Oracle, SQL Server, Ionic Framework e Xamarin. Também atuei em projetos utilizando as seguintes tecnologias: Python, Typescript, MySQL, PHP, Struts, NodeJS e MongoDB.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/felipenacif/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/felipenacif" target="_blank"><i class="fab fa-github"></i></a>
@@ -71,16 +71,30 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <a class="navbar-brand js-scroll-trigger">
+                                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/shape_digital.jpg" alt="Fugro" /></span>
+                            </a>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Senior FullStack Developer | Innovation Consultant</h3>
+                            <div class="subheading mb-3">Shape Digital, a MODEC Company</div>
+                            <p>Lider técnico e desenvolvedor da ferramenta DBMS, desenvolvida em Python e React, voltado para o controle e gerenciamento de barreiras de segurança. Ferramenta de tomada de decisão sobre barreiras de segurança para redução de downtime das instalações navais.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">NOVEMBRO 2020 - ATUALMENTE</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <a class="navbar-brand js-scroll-trigger">
                                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 logoExperience" src="assets/img/fugro.jpg" alt="Fugro" /></span>
                             </a>
                         </div>
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">FullStack Developer</h3>
+                            <h3 class="mb-0">Senior FullStack Developer | Innovation Consultant</h3>
                             <div class="subheading mb-3">Fugro do Brasil</div>
-                            <p>Integrante da equipe de evolução e manutenção de aplicações integradas da companhia, utilizando as tecnologias C#, Web Api e Angular.
+                            <p>Integrante da equipe de evolução e manutenção da aplicação gestora de projetos da Fugro, responsável pela gestão de todos os projetos globais da companhia. Projeto baseado na arquitetura DevOps do Azure, utilizando as tecnologias C#, Web Api e Angular.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">AGOSTO 2020 - ATUALMENTE</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">AGOSTO 2020 - NOVEMBRO 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
